[tool.poetry]
name = "ant-colony-optimization"
version = "0.1.0"
description = ""
authors = ["Psyhackological <konradkon@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
