[tool.poetry]
name = "genetic-algorithms"
version = "0.1.0"
description = ""
authors = ["Psyhackological <konradkon@duck.com>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
