[tool.poetry]
name = "ant-colony-optimization"
version = "0.1.0"
description = ""
authors = ["Psyhackological <konradkon@duck.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
matplotlib = "^3.8.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", "E501", "D211", "D212", "D400", "PLR0913", "S311", "D415"]
